infra/envoy/sample/envoy.yaml
static_resources:
  clusters:
    - name: service
      connect_timeout: 0.25s
      type: strict_dns
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: backend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 9090
    - name: keycloak_cluster
      connect_timeout: 0.25s
      type: strict_dns
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: keycloak_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
  listeners:
    - name: service_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            timeout: 15s
                            cluster: service
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak:
                          issuer: http://localhost:8080/auth/realms/storage
                          audiences:
                            - storage-gateway
                          remote_jwks:
                            http_uri:
                              uri: http://localhost:8080/auth/realms/storage/protocol/openid-connect/certs
                              cluster: keycloak_cluster
                              timeout: 0.5s
                            cache_duration:
                              seconds: 300
                          forward: true
                      rules:
                        - match:
                            prefix: /
                          requires:
                            provider_name: keycloak
                  - name: envoy.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      failure_mode_allow: false
                      metadata_context_namespaces:
                        - envoy.filters.http.jwt_authn
                      grpc_service:
                        google_grpc:
                          target_uri: localhost:9191
                          stat_prefix: ext_authz
                        timeout: 0.5s
                  - name: envoy.filters.http.router
                    typed_config: {}
